syntax = "proto3";

package service.ourchat.session.new_session.v1;

message NewSessionRequest {
  repeated string members = 1;
  // name of the session, if not set, will leave a default name
  optional string name = 2;
  // leaving message
  string message = 3;
  // avatar resource id
  optional string avatar_key = 4;
}

message NewSessionResponse {
  // created session id just now
  uint64 session_id = 1;
}
